--- a/src/view/cubes/Cubes.css
+++ b/src/view/cubes/Cubes.css
@@ -12,6 +12,13 @@
   font-weight: bold;
 }
 
+.sign {
+  width: 24px;
+  font-family: monospace;
+  font-size: 24px;
+  text-align: center;
+}
+
 .double {
   color: darkred;
 }
