--- a/src/view/players/Player.css
+++ b/src/view/players/Player.css
@@ -1,13 +1,36 @@
 .player {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   padding: 16px;
   border: 1px solid lightgrey;
+
+  color: white;
 }
 
 .player button {
-  margin-left: 8px;
+  margin-left: 10px;
+}
+
+.player.red {
+  background-color: darkred;
+}
+
+.player.green {
+  background-color: darkgreen;
+}
+
+.player.blue {
+  background-color: darkblue;
+}
+
+.player.yellow {
+  background-color: goldenrod;
+}
+
+.balance {
+  font-size: 36px;
 }
 
 .active {
